{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 18,
  "lineage": "fd6ce261-b128-1d26-adea-68d19f53da39",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e07666e4f85029ca",
            "public_dns": "ec2-15-207-181-188.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.181.188",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:731243664512:instance/i-04c393d402565be01",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c393d402565be01",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keycloudclass",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e8db4fa20baf01ac",
            "private_dns": "ip-192-168-1-83.ap-south-1.compute.internal",
            "private_ip": "192.168.1.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-087ce827c871a075c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023be7cdb34a09e8a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0717bb434a9b310d4",
            "tags": {
              "Name": "mysql_os"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023be7cdb34a09e8a"
            ]
          },
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_security_group.wordpress_sg",
            "aws_subnet.privatesubnet",
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:731243664512:instance/i-04aae036743d78f8e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04aae036743d78f8e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keycloudclass",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03384447be4835793",
            "private_dns": "ip-192-168-0-242.ap-south-1.compute.internal",
            "private_ip": "192.168.0.242",
            "public_dns": "ec2-13-233-27-52.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.27.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-049aff7b9ed3fe4c6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07aade3a046fd99ed"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbb803917dd790c7",
            "tags": {
              "Name": "wp_os"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07aade3a046fd99ed"
            ]
          },
          "dependencies": [
            "aws_security_group.wordpress_sg",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetgateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:internet-gateway/igw-0c04c6244f27323d8",
            "id": "igw-0c04c6244f27323d8",
            "owner_id": "731243664512",
            "tags": {
              "Name": "Internet_gateway"
            },
            "vpc_id": "vpc-00bd3682cf5faf05c"
          },
          "dependencies": [
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e07666e4f85029ca",
            "id": "nat-0f3df4f4bf5f1c6d7",
            "network_interface_id": "eni-0a1183fe43dc0347d",
            "private_ip": "192.168.0.101",
            "public_ip": "15.207.181.188",
            "subnet_id": "subnet-0bbb803917dd790c7",
            "tags": {
              "Name": "Natgateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c04c6244f27323d8",
            "id": "r-rtb-0350ed9ae6e60e1c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0350ed9ae6e60e1c2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.internetgateway",
            "aws_route_table.internet_gateway_route_table",
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0350a03b7f51b572d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0f3df4f4bf5f1c6d7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0350a03b7f51b572d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.nat_gateway_route_table",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_gateway_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0350ed9ae6e60e1c2",
            "owner_id": "731243664512",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "internet_gateway_rt"
            },
            "vpc_id": "vpc-00bd3682cf5faf05c"
          },
          "dependencies": [
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0350a03b7f51b572d",
            "owner_id": "731243664512",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nat_gateway_rt"
            },
            "vpc_id": "vpc-00bd3682cf5faf05c"
          },
          "dependencies": [
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db99b221934760d9",
            "route_table_id": "rtb-0350ed9ae6e60e1c2",
            "subnet_id": "subnet-0bbb803917dd790c7"
          },
          "dependencies": [
            "aws_route_table.internet_gateway_route_table",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5c1fda99063ec71",
            "route_table_id": "rtb-0350a03b7f51b572d",
            "subnet_id": "subnet-0717bb434a9b310d4"
          },
          "dependencies": [
            "aws_route_table.nat_gateway_route_table",
            "aws_subnet.privatesubnet",
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:security-group/sg-023be7cdb34a09e8a",
            "description": "Allow MYSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023be7cdb34a09e8a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL/Aurora",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07aade3a046fd99ed"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07aade3a046fd99ed"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysql",
            "name_prefix": "",
            "owner_id": "731243664512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bd3682cf5faf05c"
          },
          "dependencies": [
            "aws_security_group.wordpress_sg",
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:security-group/sg-07aade3a046fd99ed",
            "description": "allow ssh and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07aade3a046fd99ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress",
            "name_prefix": "",
            "owner_id": "731243664512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bd3682cf5faf05c"
          },
          "dependencies": [
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:subnet/subnet-0717bb434a9b310d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0717bb434a9b310d4",
            "map_public_ip_on_launch": false,
            "owner_id": "731243664512",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-00bd3682cf5faf05c"
          },
          "dependencies": [
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:subnet/subnet-0bbb803917dd790c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0bbb803917dd790c7",
            "map_public_ip_on_launch": true,
            "owner_id": "731243664512",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-00bd3682cf5faf05c"
          },
          "dependencies": [
            "aws_vpc.vpc_task4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_task4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:731243664512:vpc/vpc-00bd3682cf5faf05c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-035e6d7a5b4636741",
            "default_route_table_id": "rtb-0d909f9b816057e67",
            "default_security_group_id": "sg-0a2a9f73a1963f5dc",
            "dhcp_options_id": "dopt-73699118",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00bd3682cf5faf05c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d909f9b816057e67",
            "owner_id": "731243664512",
            "tags": {
              "Name": "vpc_task"
            }
          }
        }
      ]
    }
  ]
}